--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/shop-logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/shop-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>PUP Souvenir Shop</title>
+    <title>Tanglaw Clothing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
